# esp32-pio-emulator

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  library.json  platformio.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/decisions/: 0001-esp32-s3-primary-target.md  0002-arduinofake-coexistence.md  0003-supersede-arduinofake-coexistence.md  0004-pytest-plugin-control-channel.md  README.md
examples/01-blink/: README.md  platformio.ini
examples/02-button-debounce/: README.md
examples/03-serial-echo/: README.md
examples/04-rtc-moisture-logger/: README.md  platformio.ini
examples/05-pwm-fade/: README.md
examples/06-mqtt-temperature/: README.md
examples/07-deep-sleep-mqtt/: README.md  platformio.ini
harness/pytest_pio_emulator/: README.md  pyproject.toml
harness/pytest_pio_emulator/pytest_pio_emulator/: __init__.py  plugin.py
harness/pytest_pio_emulator/tests/: test_plugin.py
include/: Arduino.h  BLEDevice.h  HTTPClient.h  HardwareSerial.h  Preferences.h  PubSubClient.h  SPI.h  WiFi.h  Wire.h  esp32_hwtimer.h  esp_sleep.h
include/esp32sim/: adc.h  ble.h  clock.h  esp32sim.h  event_log.h  gpio.h  i2c.h  network.h  pwm.h  rtos.h  sleep.h  spi.h  storage.h  strict.h  uart.h
include/esp32sim_unity/: esp32sim.h
include/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
src/core/: adc.cpp  ble.cpp  clock.cpp  event_log.cpp  i2c_bus.cpp  network.cpp  pin_registry.cpp  pwm.cpp  rtos.cpp  sleep.cpp  spi_bus.cpp  storage.cpp  strict.cpp  uart_channel.cpp
(+88 files in other folders)
