[project]
name = "esp32-pio-emulator-tools"
description = "Python tooling for esp32-pio-emulator (pytest-embedded plugin lands in T2)."
version = "0.0.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Conservative defaults for now. T2 expands this when the pytest plugin lands.
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
